<resources>
    <string name="app_name">Мои Финансы</string>
    <string name="nav_home">Главная</string>
    <string name="nav_stats">Статистика</string>
    <string name="nav_settings">Настройки</string>
    <string name="add_expense">Добавить расход</string>
    <string name="what_bought">Что купили?</string>
    <string name="amount_hint">Сумма (BYN)</string>
    <string name="category_label">Категория:</string>
    <string name="btn_save">СОХРАНИТЬ</string>
    <string name="total_spent">ИТОГО ПОТРАЧЕНО</string>
    <string name="analytics_title">Аналитика</string>
    <string name="theme_toggle">Темная тема</string>
    <string name="lang_select">Язык приложения</string>
    <string name="rate_loading">Курс загружается...</string>
    <string name="cat_food">Еда</string>
    <string name="cat_transport">Транспорт</string>
    <string name="cat_housing">Жилье</string>
    <string name="cat_entertainment">Развлечения</string>
    <string name="cat_other">Другое</string>
</resources>